--- a/app.json
+++ b/app.json
@@ -25,6 +25,15 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you add them to your goals.",
+          "cameraPermission": "The app accesses your camera to let you take photos and add them to your goal."
+        }
+      ]
+    ]
   }
 }
